<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.SignUp">
    <RelativeLayout
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"


                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">



                    <EditText
                        android:id="@+id/editTextsignemail"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/shapeemail"
                        android:drawableLeft="@drawable/ic_person_black_24dp"
                        android:drawablePadding="10dp"
                        android:hint="Email Id"
                        android:inputType="textEmailAddress"
                        android:padding="15dp"
                        android:singleLine="true"
                        android:textColor="@color/progressbarcolor"
                        android:textColorHighlight="@color/progressbarcolor"
                        android:textColorHint="@color/progressbarcolor"
                        android:textCursorDrawable="@null"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />

                    <EditText
                        android:id="@+id/editTextsignpass"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textCursorDrawable="@null"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/shapeemail"
                        android:drawableLeft="@drawable/ic_lock_black_24dp"
                        android:drawablePadding="10dp"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:maxLength="15"
                        android:padding="15dp"
                        android:textColor="@color/progressbarcolor"
                        android:textColorHighlight="@color/progressbarcolor"
                        android:textColorHint="@color/progressbarcolor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextsignemail" />
                    <EditText
                        android:id="@+id/editTextsigncnfrmpass"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textCursorDrawable="@null"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/shapeemail"
                        android:drawableLeft="@drawable/ic_lock_black_24dp"
                        android:drawablePadding="10dp"
                        android:hint="Confirm Password"
                        android:inputType="textPassword"
                        android:maxLength="15"
                        android:padding="15dp"
                        android:textColor="@color/progressbarcolor"
                        android:textColorHighlight="@color/progressbarcolor"
                        android:textColorHint="@color/progressbarcolor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextsignpass" />

                    <Button
                        android:id="@+id/buttonsignup"
                        android:textColor="@color/white"
                        android:background="@drawable/ripple_button"
                        android:shadowColor="@android:color/transparent"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="8dp"
                        android:drawablePadding="10dp"
                        android:text="SignUp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextsigncnfrmpass" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="70dp"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Already have an account?"
                            android:layout_marginRight="10dp"/>
                        <TextView
                            android:id="@+id/textviewsignup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="SignIn"
                            android:textColor="@color/progressbarcolor"
                            android:textStyle="bold"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <ProgressBar
            android:id="@+id/progressBar_cyclic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:theme="@style/Progressbar.color"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>